added little margin under the avatar

--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
   </head>
   <body role="body">
     <div role="The card" class="container">
-      <article role="main-image" class = 'main-img'>
-        
+      <article role="main-image" class="main-img">
         <img
           class="equ"
           src="./images/image-equilibrium.jpg"
           alt="equilibrium-image"
         />
-        <div ><img src="./images/icon-view.svg" alt="view_icon"></div>
+        <div><img src="./images/icon-view.svg" alt="view_icon" /></div>
       </article>
       <article role="main-content">
         <h3>Equilibrium #3429</h3>
@@ -45,7 +44,7 @@
       <article class="avatar">
         <img src="./images/image-avatar.png" alt="" />
 
-        <p>Creation of <span>Jules Wyvern</span> </p>
+        <p>Creation of <span>Jules Wyvern</span></p>
       </article>
     </div>
 
