--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
 
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body role="body">
-    <div role="The card" class="container">
-      <article role="main-image" class="main-img">
+  <body>
+    <div class="container">
+      <article role="article" class = 'main-img'>
+        
         <img
           class="equ"
           src="./images/image-equilibrium.jpg"
           alt="equilibrium-image"
         />
-        <div><img src="./images/icon-view.svg" alt="view_icon" /></div>
+        <div ><img src="./images/icon-view.svg" alt="view_icon"></div>
       </article>
-      <article role="main-content">
+      <article>
         <h3>Equilibrium #3429</h3>
 
         <p>Our Equilibrium collection promotes balance and calm.</p>
@@ -44,7 +45,7 @@
       <article class="avatar">
         <img src="./images/image-avatar.png" alt="" />
 
-        <p>Creation of <span>Jules Wyvern</span></p>
+        <p>Creation of <span>Jules Wyvern</span> </p>
       </article>
     </div>
 
